@startuml
hide methods
left to right direction

class Plataforma {
  -String designacao
}

class Organizacao {
  -String nome
  -String NIF
  -String website
  -String telefone
  -String email
}

class Colaborador {
  -String nome
  -String funcao
  -String telefone
  -String email
}

class Gestor {
-String nome
-String funcao
-String telefone 
-String email
}

Plataforma "1" -- "*" Organizacao : tem registadas >
Organizacao "1" -- "**" Gestor: tem >
Organizacao "1" -- "*" Colaborador: tem  >
Gestor "1" -- "*" Colaborador : especifica >
Gestor "1" -- "1" Colaborador : é um (papel de) >
Colaborador "1" -- "1" Organizacao: trabalha para >


@enduml